# q-dna

./: .coveragerc  .gitignore  CONTEXT7_REFERENCES.md  Q-DNA_배포전략_브레인스토밍결과.md  QUICKSTART.md  README.md  RUN_TESTS.sh  TEST_REPORT_ERROR_WORKSHEET.md  context7_scaffold_helper.js  docker-compose.yml  inspect_context7_tools.js  package-lock.json  package.json  pytest.ini  run_full_verification.py  start_servers.py  test_context7_connection.js
backend/: Dockerfile  mcp_server.py  pyproject.toml  run_node2.py  setup_db.sql  start_backend.sh  test_pdf_endpoint.py  verify_env.py
backend/alembic/versions/: f527b3c4785a_initial_schema_with_ltree_and_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/constants/: error_types.py
backend/app/core/: config.py  database.py
backend/app/grpc/: server.py
backend/app/mcp/: server.py
backend/app/models/: attempt.py  curriculum.py  question.py  student_mastery.py  tag.py
backend/app/schemas/: bulk.py  error_solution.py  question.py
backend/app/services/: analytics_service.py  crawler_service.py  diagram_service.py  error_solution_service.py  math_advanced_service.py  (+5 more)
backend/scripts/: analyze_csat.py  collect_public_exams.py  download_real_exams.py  generate_real_data.py  get_demo_questions.py  init_db.py  poc_geometry.py  reinit_db.sh  seed_curriculum.py  seed_database.py  seed_links.py  seed_real_data.py  simulate_learning.py  test_pdf.py  verify_live_server.py
backend/tests/: __init__.py  test_config.py  test_constants.py  test_grpc_server.py  test_main.py  test_mcp_server.py  test_models.py
(+48 files in other folders)
